--- a/confirmationstyle.css
+++ b/confirmationstyle.css
@@ -980,10 +980,10 @@ input[type="text"]{ /* text field */
 
 
 /* Add this style for error messages */
-.error-message {
+.error-message.hidden {
     color: red;
     font-size: 0.8em;
-    display: block; /* or inline-block */
+    display: none; /* or inline-block */
     margin-top: 2px;
     margin-bottom: 5px;
 }
