--- a/massStyle.css
+++ b/massStyle.css
@@ -724,7 +724,7 @@ input[type="text"]{ /* text field */
 
 /*--- style validation [start] ---*/
 .error-message {
-    color: red;
+    color: gray;
     font-size: 0.85em; /* Or your preferred size */
     margin-top: 4px;  /* Adjust as needed */
     display: block; /* If not already block by default */
