--- a/dashStyle.css
+++ b/dashStyle.css
@@ -749,10 +749,11 @@ input[type="text"]{ /* text field */
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 14px;
-}
+}   
 
 /* --- success upload modal [start] --- */
-#successModal {
+
+#uploadSuccessModal {
   display: none;
   position: fixed;
   z-index: 2000;
@@ -761,33 +762,45 @@ input[type="text"]{ /* text field */
   width: 100%;
   height: 100%;
   background: rgba(0,0,0,0.5);
-
   display: flex;
   justify-content: center;
   align-items: flex-start;
   padding-top: 5%;
 }
 
-#successModal .modal-content {
-  background: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  width: 320px;
-  text-align: center;
-  box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
-  position: relative;
+#uploadSuccessModal .modal-content2 {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 320px;
+    text-align: center;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+    position: relative;
 }
 
-#successModal .close {
+#uploadSuccessModal .close {
   position: absolute;
   top: 8px;
   right: 12px;
   font-size: 18px;
   cursor: pointer;
 }
+
+button {
+    margin-top: 10px;
+    padding: 8px 16px;
+    border: none;
+    background-color: #2c7;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #1a5;
+}
 /* --- success upload modal [end] --- */
 /* --- modal styles [end] ---*/
-
 
 /* --- 'x' button [start] ---*/
 .close-btn {
